# ChangeLog for net-print/xfprint
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
  Use SLOT dependencies for glib/gtk+

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> xfprint-9999.ebuild:
  Migrated from mcs to xfconf

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
