@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfprint-4.5.92.tar.bz2 848627 RMD160 b406d69eff71369ecf3bf88a907906c2e50357e1 SHA1 e0b30252a7d210eaa09c6044d3943d06ede0214e SHA256 4013fd40f948abae0b547be31bc0d73fd7df5619be2483afb1bd3cca9264790a
+EBUILD xfprint-4.5.92.ebuild 792 RMD160 a325201f566fa4598cb7e0ba0a868cf328f89db1 SHA1 3e5d0f6a05006185fae93749fa34f3537d6ac1a9 SHA256 e2f153dc3d7ece721e4458ae12e8032f14cfc504c15531ce8a319f91de09ff27
 EBUILD xfprint-9999.ebuild 792 RMD160 a325201f566fa4598cb7e0ba0a868cf328f89db1 SHA1 3e5d0f6a05006185fae93749fa34f3537d6ac1a9 SHA256 e2f153dc3d7ece721e4458ae12e8032f14cfc504c15531ce8a319f91de09ff27
-MISC ChangeLog 418 RMD160 ea093ec938ab379d34fd31eeefec4ab0031ed131 SHA1 31338b48ccf4ebf47ba9f66a7b8286d8cf6b7014 SHA256 2cdd5d97cdbbb82b6c9cfc342c889cee8d3dea654b99f60c132dbcd9dad35e1f
+MISC ChangeLog 549 RMD160 31a9cbf9baf902fd332f1e27944db635a0c800ad SHA1 e52e9b42a2d6265a5b167ca7b1fc58c1d84260d8 SHA256 eaa8384337a76ff1851346f6d047667952f633ddcd712d2736806ac745321eda
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXWm8ACgkQKhnDs22gwa96BgCgn0kp2pUiXHCIYhzpS8tubL/F
-yHwAn2j+g2TASNJLmy1CSFJA8Pijnpwq
-=l+hf
+iEYEARECAAYFAkkdtc4ACgkQKhnDs22gwa9rrgCg2vw6QLOJFLZP/sHmsIBbVKN+
+4UkAn1zSOSfdJO1ql2veeYj3hAJvvDPS
+=B0oR
 -----END PGP SIGNATURE-----
